- Correct logout URL. - Rename .form-wrap to .main-wrap.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -257,7 +257,7 @@ form .page-header {
   border-bottom: solid 1px #777;
 }
 
-.form-wrap {
+.main-wrap {
   padding-bottom: 50px;
   padding-top: 50px;
   background: #f6f1ed;
